# appify-connector

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run-local.sh  task-definition.json
.github/workflows/: deploy.yml
src/appify_connector/: config.py  deps.py  exceptions.py  main.py  security.py  session_store.py
src/appify_connector/appify/: client.py  schema.py
src/appify_connector/models/: auth.py  me.py  objects.py
src/appify_connector/routers/: auth.py  health.py  me.py  objects.py  sors.py
tests/: conftest.py  test_e2e_metadata.py
